--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+<meta name="google-site-verification" content="wD8mkF3sLikMa7jU5y6wNb0VPd4ok9bsiaIwha83RWQ" />
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" /><link rel="shortcut icon" href="Files\Logo.png">
 <head>
 		<title>xLufn - Hub</title>
