--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
-<meta name="google-site-verification" content="wD8mkF3sLikMa7jU5y6wNb0VPd4ok9bsiaIwha83RWQ" />
-<meta http-equiv="content-type" content="text/html;charset=UTF-8" /><link rel="shortcut icon" href="Files\Logo.png">
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
-		<title>SyXNime</title>
+		<title>6xatz</title>
 		<style>
 			/* style for our documentation, written by LoukaMB */
 			/* style for our documentation, edited by xLufn */
