--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
-<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+<meta http-equiv="content-type" content="text/html;charset=UTF-8"/><link rel="shortcut icon" href="Files\6.ico">
 <head>
-		<title>6xatz</title>
-		<style>
+<title>6xatz</title>
+<style>
 			/* style for our documentation, written by LoukaMB */
 			/* style for our documentation, edited by xLufn */
 :root
@@ -77,7 +77,7 @@
 
 #BodyContainer
 {
-	margin: 5% 15% 0 15%;
+	margin: 1% 12% 12%;
 }
 
 .CategoryTitle
@@ -194,38 +194,26 @@ body
 	</head>
 	<body>
 	
-		<div id="PageHeader">
-			<div id="PageHeaderCenter">
-				<img id="PageHeaderLogo" src="Files\Logo.png"></img>
-				<p id="PageHeaderTitle">SyXNime</p>
-			</div>
-            <h3>Download animasi atau kartun lokal/non-lokal, dengan kualitas yang lumayan-bagus dan ukuran kecil.<h3>
-			<h3>Ya di SyXNime lah anjay:v
-			<h3><span class="CodeTypename">*Saya "Cixia" hanya meng-upload animasi atau kartun ber-ukuran 360/480p, dikarnakan internet rumah yang terlalu lambat:)</h3></span>
+		<div id="PageHeader"><div id="PageHeaderCenter"><p id="PageHeaderTitle">6xatz</p></div>
+			
+            <h3>- website ini hanya tempat untuk menyimpan semua</h3>
+			<h3>tugas-tugas sekolah yang dibutuhkan oleh 6xatz.</h3>
 			
 		<center><div id="BodyContainer">
-		
-			<h1 class="CategoryTitle"></h1><div id="" class="CodeEntry">
-
+		<div class="CodeEntry">
+			
 			<p class="CodeDefinition">
-	Di-upload pada tanggal 11-04-2020. By Cixia.
+	Di-upload pada tanggal 26/02/2022 oleh 6xatz.
 	<p class="CodeDescription"><center>
-    <a href="SyXNime\Code-Lyoko.html" target="_blank">Download, Code-Lyoko - Bahasa-Indonesia.</a>
+    <a href="SyXNime\Code-Lyoko.html" target="_blank">[Download] Tugas PKWU Tanggal 26/02/2022.</a>
 	<p class="CodeExample">
-	<span class="CodeTypename">Note: Jika video atau suara tidak terdengar saat diputar, gunakan mxplayer-android / kmplayer/pc.</span>
+	<span class="CodeTypename">Note: gunakan mixplorer (android) atau ms.word (pc) untuk membuka file ini.</span>
 	</p>
 	</div><div id="syn_clipboard_set" class="CodeEntry">
 	
-		<p class="CodeDefinition">
-	Released on 27-03-2020. By SharkFX.
-	<p class="CodeDescription"><center>
-    <a href="Files\Bg.png" target="_blank">Download, Website Background.</a>
-	<p class="CodeExample">
-	<span class="CodeTypename">Note: 1349x630 Sizes.</span>
-	</p>
-	</div><div id="syn_clipboard_set" class="CodeEntry">
+	</div>
 
-	<center>all rights reserved, copyright © 2020 <a href="https://github.com/xLufn/Hub/blob/master/README.md" target="_blank">MORE-INFORMATION!</a></center>
+	<div id="PageHeader"><div id="PageHeaderCenter"><h3>all rights reserved, copyright © 2022 <a href="https://github.com/6xatz/Hub/blob/master/README.md" target="_blank">MORE-INFORMATION!</h3></div>
 		
 </body>
 </html>
