--- a/index.html
+++ b/index.html
@@ -202,15 +202,11 @@ body
 		<center><div id="BodyContainer">
 		<div class="CodeEntry">
 			
-			<p class="CodeDefinition">
-	Di-upload pada tanggal 26/02/2022 oleh 6xatz.
-	<p class="CodeDescription"><center>
-    <a href="SyXNime\Code-Lyoko.html" target="_blank">[Download] Tugas PKWU Tanggal 26/02/2022.</a>
-	<p class="CodeExample">
-	<span class="CodeTypename">Note: gunakan mixplorer (android) atau ms.word (pc) untuk membuka file ini.</span>
-	</p>
+	<p class="CodeDefinition">Di-upload pada tanggal 26/02/2022 oleh 6xatz.
+    <a href="SyXNime\Code-Lyoko.html"><center>[Download] Tugas PKWU Tanggal 26/02/2022.</a>
+	<p class="CodeExample"><span class="CodeTypename">Note: gunakan mixplorer (android) atau ms.word (pc) untuk membuka file ini.</span></p>
 	</div><div id="syn_clipboard_set" class="CodeEntry">
-	
+
 	</div>
 
 	<div id="PageHeader"><div id="PageHeaderCenter"><h3>all rights reserved, copyright © 2022 <a href="https://github.com/6xatz/Hub/blob/master/README.md" target="_blank">MORE-INFORMATION!</h3></div>
