--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
 .CodeExample
 {
-	padding: 3% 3% 3% 3%;
+	padding: 2% 2% 2% 2%;
 	font-family: 'Roboto Mono', monospace;
 	background-color: var(--ExampleBgColor);
 	border-radius: 0px 0px 10px 10px;
@@ -190,26 +190,34 @@ body
 	background-image: url("Files\Bg.png");
 	background-repeat: repeat;
 }
-		</style>
-	</head>
-	<body>
+		</style></head><body>
 	
 		<div id="PageHeader"><div id="PageHeaderCenter"><p id="PageHeaderTitle">6xatz</p></div>
 			
-            <h3>- website ini hanya tempat untuk menyimpan semua</h3>
+            <h3>- website ini merupakan tempat untuk menyimpan semua</h3>
 			<h3>tugas-tugas sekolah yang dibutuhkan oleh 6xatz.</h3>
 			
 		<center><div id="BodyContainer">
 		<div class="CodeEntry">
 			
-	<p class="CodeDefinition">Di-upload pada tanggal 26/02/2022 oleh 6xatz.
-    <a href="SyXNime\Code-Lyoko.html"><center>[Download] Tugas PKWU Tanggal 26/02/2022.</a>
+	<p class="CodeDefinition">Di-upload oleh 6xatz.
+    <a href="Files"><center>[Download] Tugas daring smk al-manar cibarusah.</a>
 	<p class="CodeExample"><span class="CodeTypename">Note: gunakan mixplorer (android) atau ms.word (pc) untuk membuka file ini.</span></p>
+	</div><div id="syn_clipboard_set" class="CodeEntry">
+	
+	<p class="CodeDefinition">Di-upload oleh 6xatz.
+    <a href="https://rsload.net"><center>[Download] Aplikasi windows.</a>
+	<p class="CodeExample"><span class="CodeTypename">Note: gunakan windows (7, 10, 11).</span></p>
+	</div><div id="syn_clipboard_set" class="CodeEntry">
+	
+	<p class="CodeDefinition">Di-upload oleh 6xatz.
+    <a href="https://apkdone.com"><center>[Download] Aplikasi android.</a>
+	<p class="CodeExample"><span class="CodeTypename">Note: gunakan os android (aosp, evolved x, lineageos, etc).</span></p>
 	</div><div id="syn_clipboard_set" class="CodeEntry">
 
 	</div>
 
-	<div id="PageHeader"><div id="PageHeaderCenter"><h3>all rights reserved, copyright © 2022 <a href="https://github.com/6xatz/Hub/blob/master/README.md" target="_blank">MORE-INFORMATION!</h3></div>
-		
+	<div id="PageHeader"><div id="PageHeaderCenter"><p id="PageHeaderTitle"><h3>all rights reserved, copyright © 2022 <a href="https://github.com/6xatz/Hub/blob/master/README.md">MORE-INFORMATION!</h3></p></a></div>
+	
 </body>
 </html>
