--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ body
 		<div class="CodeEntry">
 			
 	<p class="CodeDefinition">Di-upload oleh 6xatz.
-    <a href="Files"><center>[Download] Tugas daring smk al-manar cibarusah.</a>
+    <a href="https://github.com/6xatz/Hub/tree/master/Files"><center>[Download] Tugas daring smk al-manar cibarusah.</a>
 	<p class="CodeExample"><span class="CodeTypename">Note: gunakan mixplorer (android) atau ms.word (pc) untuk membuka file ini.</span></p>
 	</div><div id="syn_clipboard_set" class="CodeEntry">
 	
