last commit, until code cleaned.

--- a/Files/GrowSurg/GrowSurg.html
+++ b/Files/GrowSurg/GrowSurg.html
@@ -550,7 +550,7 @@ Growtopia Surgery Simulator 2.2 - 6xatz
             else
                 drawbox.innerHTML += (colorize(temp, 'red'));
             // Operation site
-            drawbox.innerHTML += ('&#160;&#160;&#160;&#160;&#160;Operation site: ');
+            drawbox.innerHTML += ('&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Operation site: ');
             if (site < -3)
                 drawbox.innerHTML += (colorize('Unsanitary', 'red'))
             else if (site < -1)
