--- a/index.html
+++ b/index.html
@@ -193,14 +193,14 @@ body
 		<div id="PageHeader"><div id="PageHeaderCenter"><p id="PageHeaderTitle">6xatz</p></div>
 			
             <h3>- website ini merupakan tempat untuk menyimpan semua</h3>
-			<h3>tugas-tugas sekolah yang dibutuhkan oleh 6xatz.</h3>
+	<h3>tugas-tugas sekolah yang dibutuhkan oleh 6xatz.</h3>
 			
 		<center><div id="BodyContainer">
 		<div class="CodeEntry">
 			
 	<p class="CodeDefinition">Di-upload oleh 6xatz.
-    <a href="https://github.com/6xatz/Hub/tree/master/Files"><center>[Download] Tugas daring smk al-manar cibarusah.</a>
-	<p class="CodeExample"><span class="CodeTypename">Note: gunakan mixplorer (android) atau ms.word (pc) untuk membuka file ini.</span></p>
+    <a href="https://github.com/6xatz/Hub/tree/master/Files"><center>[Download] Tugas Sekolah.</a>
+	<p class="CodeExample"><span class="CodeTypename">Note: gunakan mixplorer-silver (android) atau ms. word (pc) untuk membuka file ini.</span></p>
 	</div><div id="syn_clipboard_set" class="CodeEntry">
 	
 	<p class="CodeDefinition">Di-upload oleh rsload.
@@ -210,12 +210,12 @@ body
 	
 	<p class="CodeDefinition">Di-upload oleh apkdone.
     <a href="https://apkdone.com"><center>[Download] Aplikasi android.</a>
-	<p class="CodeExample"><span class="CodeTypename">Note: gunakan os android (aosp, evolved x, lineageos, etc).</span></p>
+	<p class="CodeExample"><span class="CodeTypename">Note: gunakan os android (aosp, ricedroid, lineageos, etc).</span></p>
 	</div><div id="syn_clipboard_set" class="CodeEntry">
 
 	</div>
 
-	<div id="PageHeader"><div id="PageHeaderCenter"><p id="PageHeaderTitle"><h3>all rights reserved, copyright © 2022 <a href="https://github.com/6xatz/Hub/blob/master/README.md">MORE-INFORMATION!</h3></p></a></div>
+	<div id="PageHeader"><div id="PageHeaderCenter"><p id="PageHeaderTitle"><h3>all rights reserved, copyright © 2023 <a href="https://github.com/6xatz/Hub/blob/master/README.md">MORE-INFORMATION!</h3></p></a></div>
 	
 </body>
 </html>
