--- a/index.html
+++ b/index.html
@@ -203,13 +203,13 @@ body
 	<p class="CodeExample"><span class="CodeTypename">Note: gunakan mixplorer-silver (android) atau ms. word (pc) untuk membuka file ini.</span></p>
 	</div><div id="syn_clipboard_set" class="CodeEntry">
 	
-	<p class="CodeDefinition">Di-upload oleh rsload.
-    <a href="https://rsload.net"><center>[Download] Aplikasi windows.</a>
+	<p class="CodeDefinition">Di-upload oleh .
+    <a href="https://.com"><center>[Download] Aplikasi windows.</a>
 	<p class="CodeExample"><span class="CodeTypename">Note: gunakan windows (7, 10, 11).</span></p>
 	</div><div id="syn_clipboard_set" class="CodeEntry">
 	
-	<p class="CodeDefinition">Di-upload oleh apkdone.
-    <a href="https://apkdone.com"><center>[Download] Aplikasi android.</a>
+	<p class="CodeDefinition">Di-upload oleh .
+    <a href="https://.com"><center>[Download] Aplikasi android.</a>
 	<p class="CodeExample"><span class="CodeTypename">Note: gunakan os android (aosp, ricedroid, lineageos, etc).</span></p>
 	</div><div id="syn_clipboard_set" class="CodeEntry">
 
